# password-manager

./: .gitignore  COMMANDS.md  README.md  index.html  package-lock.json  package.json
.dev/: AI-Read-this!!.md  RELEASE-GUIDE.md
.github/workflows/: release.yml
desktop/: package.json
desktop/scripts/: install-native-host.js
desktop/src/main/: index.js  ipc-handlers.js  local-server.js  native-messaging.js
extension/: install-native-host.sh  manifest.json
extension/background/: service-worker.js
extension/content/: content-script.js
extension/popup/: popup.css  popup.html  popup.js
scripts/: build-sidecar.sh
src/: App.jsx  ThemeContext.jsx  api.js  main.jsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  crypto.rs  database.rs  lib.rs  main.rs  native_host.rs  pgp.rs  server.rs  state.rs  totp.rs
src/components/: AddEntry.jsx  DetailPanel.jsx  EditEntry.jsx  GeneratePGPKey.jsx  Login.jsx  PGPActions.jsx  PGPKeys.jsx  PasswordStrength.jsx  Settings.jsx  SetupTotp.jsx  Sidebar.jsx  TotpDisplay.jsx  Vault.jsx
src/utils/: validators.js
